--- a/redeem.html
+++ b/redeem.html
@@ -23,13 +23,13 @@
 <body>
     <!-- <header></header> -->
     <main class="home row success" id="home">
-        <div class="home-header col-md-7 col-sm-12" style="align-items: center;">
+        <div class="home-header col-md-7 col-sm-12" style="align-items: center;text-align: center;">
             <h3 class="home-header-title">Recuperez les documents de votre formation!  </h3>
             <p class="home-header-text">Vous avez paye et ne retrouvez point votre email contenant vos cours, entrez votre code et votre email ci dessous.</p>
             <form class="input-zone" onsubmit="event.preventDefault();" id="form" action="#">
                 <input type="text" class="input" placeholder="Code" id="code" name="code" required>
                 <input type="text" class="input" placeholder="Email" id="email" name="email" required> 
-                <button class="button"  > <p id="text">Recuperer</p> <div class="loader" id="loader"></div></button>
+                <button class="button"><p id="text">Recuperer</p> <div class="loader" id="loader"></div></button>
             </form>
             <!-- <p>N.B. Regardez votre voite de spam si vous le mail n'apparait pas dans votre reception.</p> -->
              <!-- <p> Excepteur sint  occaecat cupidatat non proident, sunt in culpa qui officia deserunt  mollit anim id est laboru.  Excepteur sint  occaecat cupidatat non proident, sunt in culpa qui officia deserunt  mollit anim id est laboru.  Excepteur sint  occaecat cupidatat non proident, sunt in culpa qui officia deserunt  mollit anim id est laboru</p> -->
