Some apis were not completely changed over to agribea. fixed that.

--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
     </footer>
     <script>
         const devApi = "http://127.0.0.1:8000";
-        const prodApi = "https://api-floral-water-6550.fly.dev"
+        // const prodApi = "https://api-floral-water-6550.fly.dev"
+        const prodApi = "https://api.agribea.com"
         fetch(`${prodApi}`);
         var acc = document.getElementsByClassName('question-button');
         var i;
