--- a/redeem.html
+++ b/redeem.html
@@ -109,7 +109,9 @@
     </footer>
     <script>
         const devApi = "http://127.0.0.1:8000";
-        const prodApi = "https://api-floral-water-6550.fly.dev";
+        // const prodApi = "https://api-floral-water-6550.fly.dev";
+        const prodApi = "https://api.agribea.com";
+
         fetch(`${prodApi}`);
 
         const modal = document.getElementsByTagName('dialog')[0];
