Added contact details in the webpage as well as better loggin. Also added emailing the files in the webhook so it can be initiated asynchronously from the api rather than from the client-side

--- a/index.html
+++ b/index.html
@@ -152,6 +152,14 @@
                     <p>Oui, nos packs de formation comprennent tout le nécessaire pour réussir :  modules vidéo, supports de cours, et accès à des conseils d'experts.  Parfait pour les débutants et les agriculteurs expérimentés souhaitant  se perfectionner</p>
                 </div>
             </div> 
+            <div class="question">
+                <button type="button" class="question-button button">
+                    <p>Comment nous contacter?</p>   <img src="assets/img/plus.png" class="plus" alt="">
+                </button>
+                <div class="answer-panel">
+                    <p>Par email a <a href="mailto:agribea.dar@gmail.com">agribea.dar@gmail.com</a>, ou par téléphone ou sur Whatsapp au: <a href="https://wa.me/237656963616">6 56 96 36 16</a></p>
+                </div>
+            </div> 
     </section>
     <div style="display: flex;justify-content: center;">
         <img style=" width: 50%;" src="assets/img/divider.png" alt=""> 
