Modified the buffer paylemtlink destination to reduce risk of malfunction

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         const devApi = "http://127.0.0.1:8000";
         // const prodApi = "https://api-floral-water-6550.fly.dev"
         const prodApi = "https://api.agribea.com";
-        var paymentLink = '#';
+        var paymentLink = '#payment-section';
         // fetch(`${prodApi}`);
         // (paymentLink==='#') {
             fetch(`${prodApi}/init-pay`).then((res)=>{
