Uncommented the parmentLink to fix payent clikc not redirecting immediately

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         localStorage.setItem("transactionId", response.transId)
                         var loadingScreen = document.querySelector(".loadingScreen");
                         loadingScreen.style.display = 'none';
-                        // paymentLink = response.link
+                        paymentLink = response.link
                         
                     }
                 })
